fix: layout height on mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -12,7 +12,7 @@ body {
     Cantarell, sans-serif;
   font-size: 14px;
   line-height: 1.4;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 a {
